@@ -1,3 +1,11 @@
+2010-05-05  DJ Delorie  <dj@redhat.com>
+
+	* libc/Makefile.am (stmp-sigset, stmp-iconvset, stmp-extra,
+	stmp-stdio64, stmp-posix,stmp-targetdep): Use unique temporary
+	file names to allow for parallel installs.
+	(CLEANFILES): Add new temporary file names.
+	* libc/Makefile.in: Regenerate.
+
 2010-05-03  Corinna Vinschen  <corinna@vinschen.de>
 
 	* libc/locale/lctype.c: Include <string.h> and "setlocale.h".
